Fri May 18 08:35:31 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_hash_table_del[_by_context]_ext functions in to the
	  lib/silcutil/silchashtable.[ch].

	  Removed silc_hash_table_find_all* routines and added new
	  silc_hash_table_find_foreach to replace them.

	  Added silc_hash_table_replace_ext function as extended
	  replacing function.  Separated the simple hash table interface
	  from the extended hash table interface in the file
	  lib/silcutil/silchashtable.h.

	* Fixed minor bugs and changed it to use some of the new
	  hash table functions in lib/silccore/idcache.c

Thu May 17 18:15:12 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new function silc_hash_table_find_all to return all keys
	  in the hash table by the specified key.  As the hash table is
	  collision resistant it also makes it possible to have several
	  duplicate keys in the hash table.  This function may be used to
	  find all of the keys from the hash.

	  Added user_context arguments to the SilcHashFunction,
	  SilcHashCompare and SilcHashDestructor to deliver user specified
	  context.

	  Added new fuctions silc_hash_table_find[_all]_ext to do
	  extended lookup with specified hash and compare functions and
	  specified user contexts.

	  Added new function silc_hash_table_add_ext to add the key
	  with specified hash function and user context.

	  Added new function silc_hash_table_foreach to traverse all
	  entrys in the hash table.  Added SilcHashForeach callback
	  function.

	  Added new function silc_hash_table_del_by_context to delete
	  the entry only if the context associated with the key matches.

	  Affected files are lib/silcutil/silchashtable.[ch].

	* Removed silc_hash_[server/client/channel]_id and added just
	  silc_hash_id to the lib/silcutil/silcutil.[ch].  Added also
	  silc_hash_id_compare to compare two ID's using as the hash table
	  comparison function.  Added also silc_hash_data to hash